--- a/css/main.css
+++ b/css/main.css
@@ -67,17 +67,37 @@ body {
   font-size: 14px;
 }
 
+.section, .works {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.section--gadget, .page-footer__container, .clients, .team, .features__container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
-
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
 h1,
@@ -98,7 +118,7 @@ p {
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -209,23 +229,39 @@ textarea {
 
 .email-form {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
+}
+@media screen and (min-width: 1200px) {
+  .email-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 .email-form__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   background-color: var(--secondary-bg-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  margin-right: 12px;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .email-form__input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .email-form__input {
+    width: 358px;
+    margin-right: 12px;
+  }
 }
 .email-form__label {
   position: absolute;
-  left: 16px;
+  left: 31px;
   top: 15px;
 }
 .email-form__button {
@@ -238,6 +274,8 @@ textarea {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
   letter-spacing: 0.06em;
 }
 .email-form__icon {
@@ -528,27 +566,56 @@ textarea {
 }
 
 .page-header__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  border-bottom: solid 1px #ececec;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .page-header__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-bottom: solid 1px #ececec;
+  }
+}
+@media screen and (min-width: 768px) {
+  .page-header__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    border-bottom: solid 1px #ececec;
+  }
 }
 .page-header__logo {
   color: var(--title-text-color);
   text-align: left;
-  margin-right: 93px;
+  margin-right: 88px;
+}
+@media screen and (min-width: 1200px) {
+  .page-header__logo {
+    margin-right: 93px;
+  }
 }
 
 .nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+@media screen and (min-width: 768px) {
+  .nav__list {
+    margin-right: 84px;
+  }
 }
 
 .nav__link {
@@ -586,9 +653,9 @@ textarea {
   background-color: var(--secondary-bg-color);
   color: var(--primary-bg-color);
   text-align: center;
-  padding: 200px 0;
+  padding: 118px 0;
   max-width: 1600px;
-  height: 600px;
+  height: 400px;
   margin-right: auto;
   margin-left: auto;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-img.jpg);
@@ -597,12 +664,24 @@ textarea {
   background-position: center;
   background-size: cover;
 }
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding: 200px 0;
+    height: 600px;
+  }
+}
 .hero__title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.4;
+  font-size: 26px;
+  line-height: 42px;
   text-transform: uppercase;
   margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 60px;
+  }
 }
 
 .hero__button {
@@ -619,6 +698,25 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .features__container {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .features__list {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .features__list {
+    width: 270px;
+  }
 }
 .features__title {
   color: var(--title-text-color);
@@ -627,9 +725,6 @@ textarea {
   text-align: left;
   text-transform: uppercase;
   margin-bottom: 10px;
-}
-.features__list:not(:last-child) {
-  margin-right: 30px;
 }
 .features__descr {
   line-height: 1.71;
@@ -644,7 +739,6 @@ textarea {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 270px;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
@@ -653,6 +747,11 @@ textarea {
 
 .works {
   padding-top: 0;
+}
+@media screen and (max-width: 1199px) {
+  .works {
+    display: none;
+  }
 }
 .works__container {
   display: -webkit-box;
@@ -704,10 +803,19 @@ textarea {
   line-height: 1.18;
   text-align: center;
 }
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 .team__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
 }
 .team__list {
   background-color: var(--primary-bg-color);
@@ -715,8 +823,15 @@ textarea {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-.team__list:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .team__list {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__list {
+    width: 270px;
+  }
 }
 .team__descr {
   padding-top: 30px;
@@ -741,6 +856,13 @@ textarea {
   margin-left: auto;
 }
 
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .clients__title {
   font-style: normal;
   font-weight: 700;
@@ -758,7 +880,13 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding-left: 0;
+  gap: 30px;
 }
 
 .clients__item {
@@ -771,9 +899,6 @@ textarea {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-.clients__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .clients__link {
@@ -806,19 +931,48 @@ textarea {
 
 .page-footer {
   background-color: var(--secondary-bg-color);
+}
+.page-footer__container {
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding-top: 60px;
   padding-bottom: 60px;
 }
-.page-footer__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+@media screen and (min-width: 768px) {
+  .page-footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .page-footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .page-footer__box {
-  margin-right: 70px;
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 768px) {
+  .page-footer__box {
+    margin-right: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .page-footer__box {
+    margin-right: 70px;
+  }
 }
 .page-footer__logo {
   color: var(--primary-bg-color);
@@ -835,9 +989,6 @@ textarea {
 
 /*footer-icon*/
 .text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -846,11 +997,20 @@ textarea {
   color: var(--primary-bg-color);
   margin-bottom: 20px;
 }
+@media screen and (min-width: 1200px) {
+  .text {
+    text-align: left;
+  }
+}
 
 .subscription {
   display: block;
-  padding-left: 0;
-  margin-right: 93px;
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .subscription {
+    margin-right: 93px;
+  }
 }
 .subscription__social-networks {
   margin-left: 0;
@@ -862,7 +1022,7 @@ textarea {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin: calc(-1 * var(--indent) / 2);
+  gap: 30px;
 }
 .portfolio__wrapper {
   padding: 20px 24px;
@@ -885,9 +1045,8 @@ textarea {
 }
 
 .portfolio__item {
-  -ms-flex-preferred-size: calc((100% - var(--indent)) * var(--items))/var(--items);
-      flex-basis: calc((100% - var(--indent)) * var(--items))/var(--items);
-  margin: calc(var(--indent) / 2);
+  -ms-flex-preferred-size: calc((100% - var(--indent)) * var(--items) - 1)/var(--items);
+      flex-basis: calc((100% - var(--indent)) * var(--items) - 1)/var(--items);
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
