--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,3 +1,12 @@
+.clients {
+  @extend .section--gadget;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .clients__title {
   font-style: normal;
   font-weight: 700;
@@ -14,15 +23,14 @@
 .clients__list {
   @extend %list;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   padding-left: 0;
+  gap: 30px;
 }
 
 .clients__item {
   @include flexCentered;
-
-  &:not(:last-child) {
-    margin-right: 30px;
-  }
 }
 
 .clients__link {
