--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -2,12 +2,16 @@
   background-color: var(--secondary-bg-color);
   color: var(--primary-bg-color);
   text-align: center;
-  padding: 200px 0;
-
+  padding: 118px 0;
   max-width: 1600px;
-  height: 600px;
+  height: 400px;
   margin-right: auto;
   margin-left: auto;
+
+  @media screen and (min-width: 1200px) {
+    padding: 200px 0;
+    height: 600px;
+  }
 
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/hero-img.jpg);
@@ -17,10 +21,15 @@
 
   &__title {
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.4;
+    font-size: 26px;
+    line-height: 42px;
     text-transform: uppercase;
     margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 44px;
+      line-height: 60px;
+    }
   }
 }
 
