--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,7 +1,7 @@
 .portfolio {
   display: flex;
   flex-wrap: wrap;
-  margin: calc(-1 * var(--indent) / 2);
+  gap: 30px;
 
   &__wrapper {
     padding: 20px 24px;
@@ -26,8 +26,7 @@
 }
 
 .portfolio__item {
-  flex-basis: calc((100% - var(--indent)) * var(--items)) / var(--items);
-  margin: calc(var(--indent) / 2);
+  flex-basis: calc((100% - var(--indent)) * var(--items) - 1) / var(--items);
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
