--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,10 +1,20 @@
 .contacts {
   @extend %list;
-  margin-left: auto;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+  }
 
   &__icon {
     fill: currentColor;
-    margin-right: 10px;
+    margin-right: 8px;
+
+    @media screen and (min-width: 1200px) {
+      margin-right: 10px;
+    }
   }
 }
 
