--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,6 +23,7 @@
 //layouts
 @import './layouts/pageHeader';
 @import './layouts/nav';
+@import './layouts/mobileMenu';
 @import './layouts/hero';
 @import './layouts/features';
 @import './layouts/works';
