--- a/css/main.css
+++ b/css/main.css
@@ -181,20 +181,48 @@ textarea {
   display: inline-block;
   font-family: raleway, sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 28px;
   text-decoration: none;
+}
+@media screen and (min-width: 768px) {
+  .logo, .page-footer__logo {
+    font-size: 26px;
+    line-height: 31px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo, .page-footer__logo {
+    font-size: 26px;
+    line-height: 31px;
+  }
 }
 .logo__part {
   color: var(--accent-color);
 }
 
-.contacts {
-  margin-left: auto;
+@media screen and (min-width: 1200px) {
+  .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: auto;
+  }
 }
 .contacts__icon {
   fill: currentColor;
-  margin-right: 10px;
+  margin-right: 8px;
+}
+@media screen and (min-width: 1200px) {
+  .contacts__icon {
+    margin-right: 10px;
+  }
 }
 
 .contacts__text {
@@ -220,8 +248,12 @@ textarea {
 
 .header-contacts__contacts__link {
   color: var(--primary-text-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
+}
+@media screen and (min-width: 768px) {
+  .header-contacts__contacts__link {
+    display: block;
+    width: 161px;
+  }
 }
 .header-contacts__contacts__link:not(:last-child) {
   margin-right: 50px;
@@ -590,9 +622,6 @@ textarea {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     border-bottom: solid 1px #ececec;
   }
 }
@@ -647,6 +676,63 @@ textarea {
 
 .nav__item:not(:last-child) {
   margin-right: 50px;
+}
+
+.mobile-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 16px 15px;
+}
+@media screen and (min-width: 768px) {
+  .mobile-header {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mobile-header {
+    display: none;
+  }
+}
+
+.mobile-header__logo {
+  display: block;
+  color: var(--title-text-color);
+}
+
+.mobile-header__button {
+  background-color: transparent;
+  border: none;
+  width: 40px;
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: auto;
+}
+
+.mobile-header__close {
+  opacity: 0;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 48px 40px;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  background-color: var(--primary-bg-color);
 }
 
 .hero {
