--- a/sass/components/_headerContacts.scss
+++ b/sass/components/_headerContacts.scss
@@ -1,7 +1,10 @@
 .header-contacts__contacts__link {
   color: var(--primary-text-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+    width: 161px;
+  }
 
   &:not(:last-child) {
     margin-right: 50px;
