--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,9 +2,18 @@
   display: inline-block;
   font-family: raleway, sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 28px;
   text-decoration: none;
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 31px;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 31px;
+  }
 
   &__part {
     color: var(--accent-color);
