--- a/css/main.css
+++ b/css/main.css
@@ -328,6 +328,7 @@ textarea {
 }
 
 .modal {
+  z-index: 10000;
   position: absolute;
   padding: 40px;
   top: 50%;
@@ -704,6 +705,7 @@ textarea {
 }
 
 .mobile-header__button {
+  z-index: 1000;
   background-color: transparent;
   border: none;
   width: 40px;
@@ -722,17 +724,103 @@ textarea {
 
 .mobile-header__close {
   opacity: 0;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-header__button.is-open .mobile-header__close {
+  opacity: 1;
+}
+
+.mobile-header__burger {
+  -webkit-transition: 500ms;
+  transition: 500ms;
+}
+.mobile-header__button.is-open .mobile-header__burger {
+  opacity: 0;
 }
 
 .mobile-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 100;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
   padding: 48px 40px;
-  width: 100%;
-  height: 100%;
-  z-index: 10000;
+  width: 100vh;
+  height: 100vh;
+  z-index: 100;
   background-color: var(--primary-bg-color);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.mobile-menu__nav {
+  margin-bottom: auto;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.mobile-menu__nav__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mobile-menu__nav__item .current {
+  color: #2196f3;
+}
+
+.mobile-menu__contacts {
+  margin-bottom: 64px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mobile-menu__contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mobile-menu__contacts__item .accent {
+  font-size: 34px;
+  color: #2196f3;
+}
+
+.mobile-menu__socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mobile-menu__socials__item:not(:last-child) .mobile-menu__socials__link {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .hero {
