--- a/sass/layouts/_mobileMenu.scss
+++ b/sass/layouts/_mobileMenu.scss
@@ -17,6 +17,7 @@
 }
 
 .mobile-header__button {
+  z-index: 1000;
   background-color: transparent;
   border: none;
   width: 40px;
@@ -28,20 +29,107 @@
 
 .mobile-header__close {
   opacity: 0;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .mobile-header__button.is-open & {
+    opacity: 1;
+  }
+}
+
+.mobile-header__burger {
+  transition: 500ms;
+
+  .mobile-header__button.is-open & {
+    opacity: 0;
+  }
 }
 
 //Mobile menu
 .mobile-menu {
+  display: flex;
+  flex-direction: column;
+
   position: fixed;
   top: 0;
   left: 0;
 
+  z-index: 100;
+  transform: translateX(100%);
+
   padding: 48px 40px;
 
-  width: 100%;
-  height: 100%;
+  width: 100vh;
+  height: 100vh;
 
-  z-index: 10000;
+  z-index: 100;
 
   background-color: var(--primary-bg-color);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &.is-open {
+    transform: translateX(0);
+  }
+}
+
+.mobile-menu__nav {
+  margin-bottom: auto;
+
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 0.02em;
+
+  color: #212121;
+}
+
+.mobile-menu__nav__item {
+  &:not(:last-child) {
+    margin-bottom: 32px;
+  }
+
+  .current {
+    color: #2196f3;
+  }
+}
+
+.mobile-menu__contacts {
+  margin-bottom: 64px;
+
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+
+  color: #757575;
+}
+
+.mobile-menu__contacts__item {
+  &:not(:last-child) {
+    margin-bottom: 32px;
+  }
+
+  .accent {
+    font-size: 34px;
+    color: #2196f3;
+  }
+}
+
+.mobile-menu__socials {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 10px;
+
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+.mobile-menu__socials__item:not(:last-child) .mobile-menu__socials__link {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
