--- a/css/main.css
+++ b/css/main.css
@@ -328,7 +328,6 @@ textarea {
 }
 
 .modal {
-  z-index: 10000;
   position: absolute;
   padding: 40px;
   top: 50%;
@@ -601,6 +600,17 @@ textarea {
 .page-header__container {
   display: none;
 }
+@media screen and (min-width: 768px) {
+  .page-header__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-bottom: solid 1px #ececec;
+  }
+}
 @media screen and (min-width: 1200px) {
   .page-header__container {
     display: -webkit-box;
@@ -612,17 +622,6 @@ textarea {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    border-bottom: solid 1px #ececec;
-  }
-}
-@media screen and (min-width: 768px) {
-  .page-header__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     border-bottom: solid 1px #ececec;
   }
 }
@@ -750,22 +749,36 @@ textarea {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   padding: 48px 40px;
   width: 100vh;
   height: 100vh;
-  z-index: 100;
   background-color: var(--primary-bg-color);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mobile-menu {
+    display: none;
+  }
+}
 .mobile-menu.is-open {
   -webkit-transform: translateX(0);
           transform: translateX(0);
+}
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    display: none;
+    position: absolute;
+  }
 }
 
 .mobile-menu__nav {
