--- a/css/main.css
+++ b/css/main.css
@@ -203,15 +203,6 @@ textarea {
 
 @media screen and (min-width: 1200px) {
   .contacts {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     margin-left: auto;
   }
 }
@@ -249,7 +240,7 @@ textarea {
 .header-contacts__contacts__link {
   color: var(--primary-text-color);
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .header-contacts__contacts__link {
     display: block;
     width: 161px;
@@ -328,6 +319,7 @@ textarea {
 }
 
 .modal {
+  z-index: 10000;
   position: absolute;
   padding: 40px;
   top: 50%;
@@ -526,17 +518,38 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 50px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 40px;
+  gap: 8px;
 }
-
-.filter__link:not(:last-child) {
-  margin-right: 8px;
+@media screen and (min-width: 768px) {
+  .filter__container {
+    margin-bottom: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter__container {
+    margin-bottom: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .filter__button {
@@ -573,11 +586,16 @@ textarea {
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
   background: rgba(33, 150, 243, 0.9);
-  padding: 63px 24px;
+  padding: 77px 24px;
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .overlay {
+    padding: 63px 24px;
+  }
 }
 .overlay__descr {
   font-style: normal;
@@ -731,8 +749,8 @@ textarea {
 }
 
 .mobile-header__burger {
-  -webkit-transition: 500ms;
-  transition: 500ms;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mobile-header__button.is-open .mobile-header__burger {
   opacity: 0;
@@ -749,6 +767,7 @@ textarea {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 100;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   padding: 48px 40px;
@@ -760,6 +779,10 @@ textarea {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.mobile-menu.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
 @media screen and (min-width: 768px) {
   .mobile-menu {
     display: none;
@@ -769,10 +792,6 @@ textarea {
   .mobile-menu {
     display: none;
   }
-}
-.mobile-menu.is-open {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
 }
 @media screen and (max-width: 767px) {
   .mobile-menu {
@@ -1144,6 +1163,9 @@ textarea {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    text-align: left;
     padding-top: 94px;
     padding-bottom: 94px;
   }
@@ -1171,7 +1193,6 @@ textarea {
   display: inline-block;
   color: var(--contacts-footer-color);
   font-style: normal;
-  text-align: center;
 }
 
 /*footer-icon*/
@@ -1232,12 +1253,24 @@ textarea {
 }
 
 .portfolio__item {
-  -ms-flex-preferred-size: calc((100% - var(--indent)) * var(--items) - 1)/var(--items);
-      flex-basis: calc((100% - var(--indent)) * var(--items) - 1)/var(--items);
+  -ms-flex-preferred-size: 450px;
+      flex-basis: 450px;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .portfolio__item {
+    -ms-flex-preferred-size: 354px;
+        flex-basis: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio__item {
+    -ms-flex-preferred-size: 370px;
+        flex-basis: 370px;
+  }
 }
 .portfolio__item:hover, .portfolio__item:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
