--- a/sass/components/_headerContacts.scss
+++ b/sass/components/_headerContacts.scss
@@ -1,7 +1,7 @@
 .header-contacts__contacts__link {
   color: var(--primary-text-color);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: block;
     width: 161px;
   }
