--- a/sass/components/_overlay.scss
+++ b/sass/components/_overlay.scss
@@ -6,8 +6,11 @@
   transform: translateY(100%);
 
   background: rgba(33, 150, 243, 0.9);
+  padding: 77px 24px;
 
-  padding: 63px 24px;
+  @media screen and (min-width: 1200px) {
+    padding: 63px 24px;
+  }
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
