--- a/sass/layouts/_mobileMenu.scss
+++ b/sass/layouts/_mobileMenu.scss
@@ -38,7 +38,7 @@
 }
 
 .mobile-header__burger {
-  transition: 500ms;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   .mobile-header__button.is-open & {
     opacity: 0;
@@ -54,7 +54,7 @@
   top: 0;
   left: 0;
 
-  //z-index: 100;
+  z-index: 100;
   transform: translateX(100%);
 
   padding: 48px 40px;
@@ -62,21 +62,20 @@
   width: 100vh;
   height: 100vh;
 
-  //z-index: 100;
-
   background-color: var(--primary-bg-color);
-
-  @media screen and (min-width: 768px) {
-    display: none;
-  }
-  @media screen and (min-width: 1200px) {
-    display: none;
-  }
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &.is-open {
     transform: translateX(0);
+  }
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: none;
   }
 
   @media screen and (max-width: 767px) {
