--- a/sass/layouts/_pageFooter.scss
+++ b/sass/layouts/_pageFooter.scss
@@ -16,6 +16,8 @@
 
     @media screen and (min-width: 1200px) {
       display: flex;
+      flex-wrap: nowrap;
+      text-align: left;
       padding-top: 94px;
       padding-bottom: 94px;
     }
@@ -48,7 +50,7 @@
   color: var(--contacts-footer-color);
   font-style: normal;
 
-  text-align: center;
+  //text-align: center;
 }
 
 /*footer-icon*/
