--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -26,7 +26,16 @@
 }
 
 .portfolio__item {
-  flex-basis: calc((100% - var(--indent)) * var(--items) - 1) / var(--items);
+  //flex-basis: calc((100% - var(--indent)) * var(--items) - 1) / var(--items);
+  flex-basis: 450px;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: 370px;
+  }
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
