--- a/css/main.css
+++ b/css/main.css
@@ -306,6 +306,7 @@ textarea {
 }
 
 .backdrop {
+  z-index: 10000;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -319,18 +320,22 @@ textarea {
 }
 
 .modal {
-  z-index: 10000;
   position: absolute;
   padding: 40px;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 528px;
+  width: 450px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
 }
 
 .button-close {
@@ -384,11 +389,16 @@ textarea {
 .application-form__title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 30px;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
   margin-bottom: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .application-form__title {
+    line-height: 23px;
+  }
 }
 .application-form__button {
   display: -webkit-box;
@@ -506,6 +516,17 @@ textarea {
 .checkbox__input:checked + .checkbox__field {
   background-color: var(--accent-color);
   outline: none;
+}
+
+.agreement {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+}
+@media screen and (min-width: 1200px) {
+  .agreement {
+    line-height: 24px;
+  }
 }
 
 .agreement__link {
