--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -1,4 +1,5 @@
 .backdrop {
+  z-index: 10000;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -13,13 +14,16 @@
 }
 
 .modal {
-  z-index: 10000;
   position: absolute;
   padding: 40px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
+  width: 450px;
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+  }
 
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -62,13 +66,18 @@
   &__title {
     font-weight: 700;
     font-size: 20px;
-    line-height: 23px;
+    line-height: 30px;
+
     text-align: center;
     letter-spacing: 0.03em;
 
     color: var(--title-text-color);
 
     margin-bottom: 12px;
+
+    @media screen and (min-width: 1200px) {
+      line-height: 23px;
+    }
   }
 
   &__button {
@@ -160,7 +169,15 @@
     outline: none;
   }
 }
+.agreement {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
 
+  @media screen and (min-width: 1200px) {
+    line-height: 24px;
+  }
+}
 .agreement__link {
   color: var(--accent-color);
   text-decoration-line: underline;
