--- a/css/main.css
+++ b/css/main.css
@@ -308,16 +308,11 @@ textarea {
 .backdrop {
   z-index: 10000;
   position: fixed;
-  max-width: 450px;
+  width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.2);
-}
-@media screen and (min-width: 1200px) {
-  .backdrop {
-    width: 528px;
-  }
 }
 .backdrop.is-hidden {
   opacity: 0;
