--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -1,15 +1,11 @@
 .backdrop {
   z-index: 10000;
   position: fixed;
-  max-width: 450px;
+  width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.2);
-
-  @media screen and (min-width: 1200px) {
-    width: 528px;
-  }
 
   &.is-hidden {
     opacity: 0;
