--- a/css/main.css
+++ b/css/main.css
@@ -246,8 +246,10 @@ textarea {
     width: 161px;
   }
 }
-.header-contacts__contacts__link:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 1200px) {
+  .header-contacts__contacts__link:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .email-form {
@@ -270,7 +272,7 @@ textarea {
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1199px) {
   .email-form__input {
     margin-bottom: 20px;
   }
@@ -731,11 +733,11 @@ textarea {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 999;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   padding: 48px 40px;
-  width: 100vh;
+  width: 100%;
   height: 100vh;
   background-color: var(--primary-bg-color);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -750,17 +752,12 @@ textarea {
 @media screen and (min-width: 768px) {
   .mobile-menu {
     display: none;
+    position: absolute;
   }
 }
 @media screen and (min-width: 1200px) {
   .mobile-menu {
     display: none;
-  }
-}
-@media screen and (max-width: 767px) {
-  .mobile-menu {
-    display: none;
-    position: absolute;
   }
 }
 
@@ -1005,6 +1002,11 @@ textarea {
   text-align: left;
   text-transform: uppercase;
   margin-bottom: 10px;
+}
+@media screen and (max-width: 480px) {
+  .features__title {
+    text-align: center;
+  }
 }
 .features__descr {
   line-height: 1.71;
