--- a/sass/layouts/_mobileMenu.scss
+++ b/sass/layouts/_mobileMenu.scss
@@ -54,12 +54,12 @@
   top: 0;
   left: 0;
 
-  z-index: 100;
+  z-index: 999;
   transform: translateX(100%);
 
   padding: 48px 40px;
 
-  width: 100vh;
+  width: 100%;
   height: 100vh;
 
   background-color: var(--primary-bg-color);
@@ -72,15 +72,11 @@
 
   @media screen and (min-width: 768px) {
     display: none;
+    position: absolute;
   }
 
   @media screen and (min-width: 1200px) {
     display: none;
-  }
-
-  @media screen and (max-width: 767px) {
-    display: none;
-    position: absolute;
   }
 }
 
