--- a/sass/layouts/_mobileMenu.scss
+++ b/sass/layouts/_mobileMenu.scss
@@ -72,11 +72,7 @@
 
   @media screen and (min-width: 768px) {
     display: none;
-    position: absolute;
-  }
-
-  @media screen and (min-width: 1200px) {
-    display: none;
+    //position: absolute;
   }
 }
 
@@ -96,7 +92,7 @@
     margin-bottom: 32px;
   }
 
-  .current {
+  &--current {
     color: #2196f3;
   }
 }
@@ -117,7 +113,7 @@
     margin-bottom: 32px;
   }
 
-  .accent {
+  &--accent {
     font-size: 34px;
     color: #2196f3;
   }
@@ -135,6 +131,10 @@
 
   letter-spacing: 0.02em;
   color: #2196f3;
+
+  &__link {
+    color: var(--accent-color);
+  }
 
   &__item:not(:last-child) &__link {
     padding-right: 10px;
